[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicescad"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
	# https://github.com/jeff-dh/SolidPython
	'solidpython2>=2.0.2',
	# https://pypi.org/project/pywin32/
	'pywin32; platform_system=="Windows"',
	# https://pypi.org/project/requests/
	"requests",
	# https://pypi.org/project/Pygments/
	"pygments",
	# nicegui
    'nicegui>=1.3.5',
]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "nicescad/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/nicescad"
Documentation = "https://wiki.bitplan.com/index.php/nicescad"
Source = "https://github.com/WolfgangFahl/nicescad"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["nicescad","scad_examples"]

[tool.hatch.build.targets.wheel.sources]
"nicescad" = "nicescad"
"scad_examples" = "scad_examples"

[project.scripts]
nicescad = "nicescad.nicescad_cmd:main"
